--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pandas==1.4.2
 python-dateutil==2.8.1
 pytz==2020.1
 scikit-learn==0.22.1
+numpy==1.11.0
 six==1.14.0
 virtualenv==20.0.7
 Werkzeug==1.0.1
