--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.15.1
 MarkupSafe==1.1.1
-pandas==1.4.2
+pandas
 python-dateutil==2.8.1
 pytz==2020.1
-scikit-learn==0.22.1
-numpy==1.11.0
+scikit-learn
+numpy
 six==1.14.0
 virtualenv==20.0.7
 Werkzeug==1.0.1
